# mem-note

./: LICENSE  README.md  pyproject.toml
src/: main.py
src/hub/: README.md  __init__.py  main.py  repo.json
src/hub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/hub/plugins/: hi.py  info.py  mem.py  pkg.py  repo.py
src/mem/: __init__.py
src/mem/plugins/: __init__.py  hi.py  pkg.py
