[project]
name = "hub"
version = "0.1.1"
description = "A plugin-based note & utility runner"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Glenn Sutherland" }]

[project.scripts]
hub = "hub.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
