[project]
name = "hub"
version = "0.5.0"
description = "A plugin-based note & utility runner"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Glenn Sutherland" }]
dependencies = [
    "embed-term>=1.0.0",
]
[project.scripts]
hub = "hub.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
